# MCS_gui

./: .gitignore  CMakeLists.txt  MCS_gui.pri  MCS_gui.pro  MCS_gui.sln  MCS_gui.vcxproj  MCS_gui.vcxproj.filters  README.md  SampleSubscription.cpp  SampleSubscription.h  accelerater.cpp  accelerater.h  accelerater.ui  backend.cpp  backend.h  cpp.hint  dbdetails.cpp  dbdetails.h  dbdetails.ui  interbd.cpp  interbd.h  interbd.ui  interps.cpp  interps.h  interps.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mcsGuiConfig.xml  mcs_resource.qrc  mychartview.cpp  mychartview.h  mychartview.ui  powersupply.cpp  powersupply.h  psdialog.cpp  psdialog.h  psdialog.ui  qMCS_gui_zh_CN.ts  (+8 more)
